mother's day game

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <body>
 <h1>Catch Those Pesky Kiddos! <br> <span class="score"> SCORE: 0</span></h1>
     <p>It takes a lot of patience and focus for a mom to manage to round up not just one, but all <strong>four</strong> of your kiddos together at the same time. Click start, then use your mouse to click on those unruly chus and get them all together in one place. It's not easy, but sometimes a mom's gotta do what a mom's gotta do, right?</p>
-    <br>
-    <p><strong>LUCKILY</strong> you have a guardian angel who will help you! Click on the angel and it will slow your kiddos down so you can bonk them more. </p>
+    <p><strong>HOWEVER</strong> you have a <i>handsome</i> <span style="color:blue">guardian angel</span>! Don't click on them! If the angel is clicked, you lose a bonk. </p>
     <button class="gameStart" onClick="startGame()">Start!</button>
 
     <div class="game">
